.gsd/exec/f59b3886-0d20-4d9f-bbb0-5409fe1fe8a9.stderr
    Checking bevyrogue v0.1.0 (/home/fabio/dev/bevyrogue/.gsd/worktrees/M012)
warning: unused import: `MAX_AV`
  --> src/combat/bootstrap.rs:10:30
   |
10 | use super::av::{ActionValue, MAX_AV};
   |                              ^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `order_from_speeds`
  --> src/combat/bootstrap.rs:16:36
   |
16 | use super::turn_order::{TurnOrder, order_from_speeds};
   |                                    ^^^^^^^^^^^^^^^^^

warning: unused import: `crate::combat::stun::Stunned`
 --> src/combat/action_query.rs:6:5
  |
6 | use crate::combat::stun::Stunned;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Commander` and `Ko`
  --> src/combat/action_query.rs:12:27
   |
12 | use crate::combat::unit::{Commander, Ko, Unit};
   |                           ^^^^^^^^^  ^^

warning: unused import: `turn_order::TurnOrder`
  --> src/combat/observability.rs:14:5
   |
14 |     turn_order::TurnOrder,
   |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `grant_free_skill_events`
  --> src/combat/turn_system/pipeline.rs:17:5
   |
17 |     grant_free_skill_events,
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::combat::team::Team`
  --> src/combat/turn_system/pipeline.rs:25:5
   |
25 | use crate::combat::team::Team;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::combat::types::SkillId`
  --> src/combat/turn_system/pipeline.rs:27:5
   |
27 | use crate::combat::types::SkillId;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `push` found for struct `VecDeque<T, A>` in the current scope
   --> src/combat/turn_system/mod.rs:174:28
    |
174 |                 log.events.push(crate::combat::log::LogEntry::ActionFailed {
    |                 -----------^^^^
    |
help: you might have meant to use `push_back`
    |
174 |                 log.events.push_back(crate::combat::log::LogEntry::ActionFailed {
    |                                +++++

warning: unused variable: `sp_pool`
  --> src/combat/action_query.rs:50:5
   |
50 |     sp_pool: &SpPool,
   |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_sp_pool`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:125:65
    |
125 | ...   let Ok((_, attacker_team, attacker_unit, _attacker_kit, mut attacker_ult, mut defender_tough, attacker_ko, attacker_stunned, ...
    |                                                               ----^^^^^^^^^^^^
    |                                                               |
    |                                                               help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:125:178
    |
125 | ...nned, attacker_commander, _, mut attacker_streak, mut attacker_round_flags)) =
    |                                                      ----^^^^^^^^^^^^^^^^^^^^
    |                                                      |
    |                                                      help: remove this `mut`

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:344:58
    |
344 |     let (_, attacker_team, attacker_unit, _attacker_kit, mut attacker_ult, _, attacker_ko, attacker_stunned, attacker_commander, _,...
    |                                                          ----^^^^^^^^^^^^
    |                                                          |
    |                                                          help: remove this `mut`

warning: unused variable: `turn_order`
  --> src/combat/turn_system/pipeline.rs:96:5
   |
96 |     turn_order: &mut ResMut<TurnOrder>,
   |     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_turn_order`

warning: unused variable: `attacker_commander`
   --> src/combat/turn_system/pipeline.rs:344:110
    |
344 | ...cker_stunned, attacker_commander, _, mut attacker_streak, _attacker_round_flags) = attacker;
    |                  ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_attacker_commander`

For more information about this error, try `rustc --explain E0599`.
warning: `bevyrogue` (lib) generated 14 warnings
error: could not compile `bevyrogue` (lib) due to 1 previous error; 14 warnings emitted
   Compiling bevyrogue v0.1.0 (/home/fabio/dev/bevyrogue/.gsd/worktrees/M012)
warning: unused import: `MAX_AV`
  --> src/combat/bootstrap.rs:10:30
   |
10 | use super::av::{ActionValue, MAX_AV};
   |                              ^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `order_from_speeds`
  --> src/combat/bootstrap.rs:16:36
   |
16 | use super::turn_order::{TurnOrder, order_from_speeds};
   |                                    ^^^^^^^^^^^^^^^^^

warning: unused import: `crate::combat::stun::Stunned`
 --> src/combat/action_query.rs:6:5
  |
6 | use crate::combat::stun::Stunned;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Commander` and `Ko`
  --> src/combat/action_query.rs:12:27
   |
12 | use crate::combat::unit::{Commander, Ko, Unit};
   |                           ^^^^^^^^^  ^^

warning: unused import: `turn_order::TurnOrder`
  --> src/combat/observability.rs:14:5
   |
14 |     turn_order::TurnOrder,
   |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `grant_free_skill_events`
  --> src/combat/turn_system/pipeline.rs:17:5
   |
17 |     grant_free_skill_events,
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::combat::team::Team`
  --> src/combat/turn_system/pipeline.rs:25:5
   |
25 | use crate::combat::team::Team;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::combat::types::SkillId`
  --> src/combat/turn_system/pipeline.rs:27:5
   |
27 | use crate::combat::types::SkillId;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `push` found for struct `VecDeque<T, A>` in the current scope
   --> src/combat/turn_system/mod.rs:174:28
    |
174 |                 log.events.push(crate::combat::log::LogEntry::ActionFailed {
    |                 -----------^^^^
    |
help: you might have meant to use `push_back`
    |
174 |                 log.events.push_back(crate::combat::log::LogEntry::ActionFailed {
    |                                +++++

warning: unused variable: `sp_pool`
  --> src/combat/action_query.rs:50:5
   |
50 |     sp_pool: &SpPool,
   |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_sp_pool`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:125:65
    |
125 | ...   let Ok((_, attacker_team, attacker_unit, _attacker_kit, mut attacker_ult, mut defender_tough, attacker_ko, attacker_stunned, ...
    |                                                               ----^^^^^^^^^^^^
    |                                                               |
    |                                                               help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:125:178
    |
125 | ...nned, attacker_commander, _, mut attacker_streak, mut attacker_round_flags)) =
    |                                                      ----^^^^^^^^^^^^^^^^^^^^
    |                                                      |
    |                                                      help: remove this `mut`

warning: variable does not need to be mutable
   --> src/combat/turn_system/pipeline.rs:344:58
    |
344 |     let (_, attacker_team, attacker_unit, _attacker_kit, mut attacker_ult, _, attacker_ko, attacker_stunned, attacker_commander, _,...
    |                                                          ----^^^^^^^^^^^^
    |                                                          |
    |                                                          help: remove this `mut`

warning: unused variable: `turn_order`
  --> src/combat/turn_system/pipeline.rs:96:5
   |
96 |     turn_order: &mut ResMut<TurnOrder>,
   |     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_turn_order`

warning: unused variable: `attacker_commander`
   --> src/combat/turn_system/pipeline.rs:344:110
    |
344 | ...cker_stunned, attacker_commander, _, mut attacker_streak, _attacker_round_flags) = attacker;
    |                  ^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_attacker_commander`

For more information about this error, try `rustc --explain E0599`.
warning: `bevyrogue` (lib) generated 14 warnings
error: could not compile `bevyrogue` (lib) due to 1 previous error; 14 warnings emitted
